# kirinuki-workshop

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  welcome-codespaces.txt  welcome.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: WORKSHOP_README.md  ai-driven-dev-workshop.md  architecture.md  handson.md
scripts/: hormozi_captions.py  pipeline-claude.py  pipeline.py  score-with-claude.py  score.py  segment-with-claude.py  segment.py  shorts_generator.py  transcribe.py  transcribe.sh
